# bevy-webworker-test

./: .gitignore  Cargo.toml  run.ps1  run.sh  server.py
src/: main.rs
wasm/: index.html  worker.js
