[package]
name = "bevy-webworker-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/anlumo/bevy", branch = "offscreen-canvas" }
raw-window-handle = "0.4.2"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "DedicatedWorkerGlobalScope",
]